Breakpoints - Added CSS breakpoints to prevent site completely cooking itself on mobile. - Added JS script for possible future redirect.

--- a/home_styles.css
+++ b/home_styles.css
@@ -55,6 +55,10 @@
     margin: 6rem auto;
     width: max-content;
 }
+/* Arrows */
+#starting-steps img {
+    width: 13rem;
+}
 /* Normal button */
 #starting-steps a {
     padding: 2rem 2.8rem;
